# structure-splitting

./: .gitignore  .gitmodules  notes.txt  todo.txt
crate_pass/: Cargo.toml  rustfmt.toml
crate_pass/examples/: contrived.rs  n-body.rs  sim_contrived.rs
crate_pass/src/: index.txt  lib  lib.rs  main.rs
crate_pass/timing/10000/: n  y
crate_pass/timing/100000/: n  y
crate_pass/timing/1000000/: n  y
mir_utils/: Cargo.toml
mir_utils/src/: deaggregator.rs  expand.rs  factor_function_call.rs  lib.rs  lvalue_splitter.rs  split_arg.rs  split_function_call.rs  split_function_def.rs  split_struct.rs  split_utils.rs  splittable.rs  struct_base_replacer.rs  type_tuplify.rs  walkmut.rs
mir_utils/src/expand/: deaggregator.rs  mod.rs
mir_utils/src/split_struct/: mod.rs
paper/: paper.tex
test/test_tuple_arg/: Cargo.toml
test/test_tuple_arg/src/: lib.rs
