[package]
name = "compiler"
version = "0.1.0"
authors = ["Jacob Bisnett <jacob.bisnett@gmail.com>"]

[lib]
name = "compiler"
plugin = true

[dependencies]
derive-new = "0.4"
rand = "0.3"
time = "0.1"
mir_utils = {path = "../mir_utils"}

[dependencies.lazy_static]
git = "https://github.com/rust-lang-nursery/lazy-static.rs"

